# Frogger

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  angular.json  index.html  package.json  pnpm-lock.yaml  progress.md  research-external-index-speed.md  researcher-tauri-macos-context.md  scout-double-selection-bug.md  scout-home-dir-bug.md  scout-indexing-tradeoffs.md  scout-local-indexing-context.md  spec-requirements.md  system-design.md  tech-stack.md  vitest.config.ts
.github/workflows/: ci.yml
docs/: prd-frogger-phase-1-initial-file-manager.md  tasks-prd-frogger-phase-1-initial-file-manager.md
scripts/: clear-local-embeddings.sh
src/: App.tsx  index.css  index.html  main.js  preload.js  renderer.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  errors.rs  indexing.rs  lib.rs  main.rs  models.rs  persistence.rs  scope_path.rs  state.rs
src-tauri/src/commands/: chat_commands.rs  file_commands.rs  indexing_commands.rs  mod.rs  organize_pipeline.rs  search_commands.rs  settings_commands.rs
src-tauri/src/data/: migrations.rs  mod.rs  repository.rs
src-tauri/src/models/: file_entry.rs  mod.rs  operation.rs  search.rs  volume.rs
src-tauri/src/services/: claude_service.rs  embedding_service.rs  file_service.rs  indexing_service.rs  mod.rs  ocr_service.rs  organize_service.rs  permission_service.rs  search_service.rs  spreadsheet_service.rs  undo_service.rs
src-tauri/src/shell/: safety.rs
src/app/: app.component.css  app.component.html  app.component.ts
src/app/core/: frogger-api.service.ts  frogger-api.types.ts  frogger-events.service.ts  session-store.service.ts
src/components/chat/: ChatPanel.test.tsx  ChatPanel.tsx  DiffPreview.tsx  OrganizeCard.test.tsx  OrganizeCard.tsx  OrganizeModal.test.tsx  OrganizeModal.tsx  ToolConfirmation.test.tsx  ToolConfirmation.tsx
src/components/file-view/: Breadcrumb.test.tsx  Breadcrumb.tsx  ColumnView.test.tsx  ColumnView.tsx  FileView.test.tsx  FileView.tsx  GalleryView.test.tsx  GalleryView.tsx  GridView.tsx  ListView.tsx
src/components/layout/: AppLayout.test.tsx  AppLayout.tsx  StatusBar.test.tsx  StatusBar.tsx  TitleBar.test.tsx  TitleBar.tsx
src/components/onboarding/: OnboardingModal.test.tsx  OnboardingModal.tsx
src/components/permissions/: PermissionPromptModal.tsx
src/components/quick-look/: AudioPreview.tsx  CodePreview.tsx  MarkdownPreview.tsx  (+3 more)
src/hooks/: useChat.ts  useDragAndDrop.test.ts  useDragAndDrop.ts  useFileActions.ts  useFileNavigation.test.ts  useFileNavigation.ts  useFileOperations.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useQuickLook.test.ts  useQuickLook.ts  useSearch.test.ts  useSearch.ts  useTauriEvents.test.ts  useTauriEvents.ts  useTheme.ts
src/services/: chatService.ts  fileService.test.ts  fileService.ts  permissionGate.test.ts  permissionGate.ts  searchService.test.ts  searchService.ts  settingsService.test.ts  settingsService.ts
src/stores/: chatStore.test.ts  chatStore.ts  fileStore.test.ts  fileStore.ts  onboardingStore.test.ts  onboardingStore.ts  permissionPromptStore.test.ts  permissionPromptStore.ts  searchStore.test.ts  searchStore.ts  settingsStore.test.ts  settingsStore.ts
src/styles/: globals.css
src/types/: file.ts  search.ts  volume.ts
src/utils/: actionParser.test.ts  actionParser.ts  editablePlan.test.ts  editablePlan.ts  fileType.test.ts  fileType.ts  paths.ts
tasks/: todo.md
(+19 files in other folders)
