[package]
name = "frogger"
version = "0.1.0"
description = "AI-native desktop file manager"
authors = ["you"]
edition = "2021"

[lib]
name = "frogger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
sha2 = "0.10"
mime_guess = "2"
tracing = "0.1"
dirs = "6"
sqlite-vec = "0.1"
zerocopy = { version = "0.8", features = ["derive"] }
notify-debouncer-mini = "0.7"
