[package]
name = "frogger"
version = "0.1.0"
description = "Finder-style desktop file manager"
authors = ["Luke Smac"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "frogger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
fuzzy-matcher = "0.3"
ignore = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
notify = "8"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
trash = "5"
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"

